<resources>
    <string name="app_name">Swes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_language">Language</string>
    <string name="nav_refrences">Refrences</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>FAQ</item>
        <item>Refrences</item>
        <item>Settings</item>
        <item>Subscrition</item>
        <item>Logout</item>

    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="share_SM">Share App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">SWES</string>
    <string name="slide_1_desc">Learn Software Engineering</string>

    <string name="slide_2_title">SWES</string>
    <string name="slide_2_desc">A new way of learning</string>

    <string name="slide_3_title">SWES</string>
    <string name="slide_3_desc">See our tutorials, Solve our Tests</string>

    <string name="slide_4_title">SWES</string>
    <string name="slide_4_desc">See a real life casestudy</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="dark">Dark Theme</string>
    <string name="darkdesc">Enable/Disable dark theme</string>
    <string name="auth_failed">Failed</string>


    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="btn_skip_intro">Skip Intro</string>


    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string-array name="faq_questions">
        <item>What\'s SWES?</item>
        <item>What\'s Category this app is under?</item>
        <item>What Service we provide?</item>
        <item>How to get the biggest benefits?</item>
        <item>How to send my feedback?</item>
    </string-array>
    <string-array name="faq_Answes">
        <item>SWES is a Software Engineering Learning App for students</item>
        <item>This App is under m-Learning</item>
        <item>We provide you Tutorials, Stories, Case studies and tests in an interactive enviroment</item>
        <item>You can See our Tutorials and Stories solve tests and get Interactive with our app forum</item>
        <item>You can send us feedback with clicking on fab</item>
    </string-array>

    <string name="arabic">عربي</string>

    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>

    <string name="course_desc">Course Description</string>
    <string name="course_prereq">Course prerequisites</string>
    <!--intent extras-->
    <string name="old_password">oldPassword</string>
    <!--content descriptions-->
    <string name="up">Up button</string>
    <!--toast message -->
    <string name="upload_msg_suc">The photo has been updated successfully</string>
    <string name="upload_msg_fail">Sorry , The photo has not uploaded</string>
    <string name="load_msg_fail">Sorry, the photo is not loaded</string>
    <string name="info_changed_msg_suc">Your information has been changed successfully</string>
    <string name="wrong_password">Sorry, you entered wrong password</string>
    <string name="change_password_suc">Your password has changed successfully</string>
    <string name="invalid_password">Enter more than 5 characters or digits</string>
    <!--fire base keys -->
    <string name="fb_course_data" translatable="false">course_data</string>
    <string name="fb_course_desc" translatable="false">over_view</string>
    <string name="fb_course_photo" translatable="false">photo</string>
    <string name="fb_prerequiste" translatable="false">prerequiste</string>
    <string name="fb_users" translatable="false">students</string>
    <string name="fb_users_name" translatable="false">name</string>
    <string name="fb_users_email" translatable="false">email</string>
    <string name="fb_users_pp" translatable="false">StudentPicture</string>
    <string name="fb_pp_folder" translatable="false">profilePics</string>
    <string name="fb_tests_node" translatable="false">Tests</string>
    <string name="fb_levels_node" translatable="false">Levels</string>
    <string name="fb_lessons_node" translatable="false">Lessons</string>
    <string name="fb_lessons_pics_folder" translatable="false">lessonsPics</string>
    <!--Subscription events-->
    <string name="videos">Videos</string>
    <string name="caseStudies">Case Studies</string>
    <string name="levels">Levels</string>
    <string name="lessons">Lessons</string>
    <string name="tests">Tests</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_new">Test</string>
    <!--intent extras-->
    <string name="lesson_extra" translatable="false">Lesson</string>
</resources>
