<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/nav_faq" />
        <item
            android:id="@+id/nav_refrence"
            android:icon="@drawable/ic_refrences"
            android:title="@string/nav_refrences" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_subscribion"
            android:icon="@drawable/ic_language"
            android:title="Subscribition" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_language"
            android:title="Logout"
            />
    </group>




        <item android:id="@+id/posts"
            android:title="posts"
            android:icon="@drawable/icons8comments32"
            />


    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/share_SocialMedia"
                android:title="@string/share_SM" />
        </menu>
    </item>

</menu>